# devpro-s3-storages

./: .gitignore
.github/workflows/: django_ci.yml
django_project_ex/: README.md  pyproject.toml
django_project_ex/example/: settings.py  urls.py
django_project_ex/example/upload/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django_project_ex/example/upload/migrations/: 0001_initial.py
django_project_ex/example/upload/templates/upload/: private_upload.html  public_upload.html
